[package]
name = "rust-vulkan-tutorial-ash-sdl2"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = { version = "0.37.0", features = ["raw-window-handle"] }
ash = { version = "0.38.0", features = [] }

# small exec build:
# $ cargo +nightly run --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-unknown-linux-gnu
[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = false
panic = "abort"
